--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "bulma": "^0.7.5",
+    "@mdi/font": "^4.4.95",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-service": "^4.1.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "sass": "^1.20.1",
+    "sass-loader": "7.*"
   }
 }
