--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "css-build": "node-sass --omit-source-map-url src/sass/style.scss src/css/style.css"
   },
   "dependencies": {
     "vue": "^2.6.10",
@@ -16,6 +17,7 @@
     "@vue/cli-service": "^4.1.0",
     "vue-template-compiler": "^2.6.10",
     "sass": "^1.20.1",
-    "sass-loader": "7.*"
+    "sass-loader": "7.*",
+    "node-sass": "^4.12.0"
   }
 }
