--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "css-build": "node-sass --omit-source-map-url src/sass/style.scss src/css/style.css"
   },
   "dependencies": {
-    "vue": "^2.6.10",
-    "bulma": "^0.7.5",
     "@mdi/font": "^4.4.95",
+    "bulma": "^0.7.5",
+    "vue": "^2.6.10",
+    "vue-fluent": "^0.1.4",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
