--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
   },
   "dependencies": {
     "@mdi/font": "^4.4.95",
+    "axios": "^0.19.2",
     "bulma": "^0.7.5",
+    "debounce": "^1.2.0",
     "vue": "^2.6.10",
     "vue-fluent": "^0.1.4",
-    "vue-router": "^3.1.3"
+    "vue-moment": "^4.1.0",
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.5",
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
+    "@vue/cli-plugin-router": "~4.4.0",
     "@vue/cli-service": "^4.1.0",
-    "vue-template-compiler": "^2.6.10",
+    "node-sass": "^4.12.0",
     "sass": "^1.20.1",
     "sass-loader": "7.*",
-    "node-sass": "^4.12.0"
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
